# rvv-intrinsic

./: .gitignore  .gitmodules  LICENSE.txt  README.md
rvv_intrinsic/: .gitignore  rvv_intrinsic.h
scripts/: clang-format.patch  configure.in  release.sh  run.py
tests/: .clangd.template
tests/_zfh_zvfh_zve32f/: Makefile  main.c
tests/_zve32f/: Makefile  main.c
tests/_zve32x/: Makefile  main.c
tests/_zve64d/: Makefile  main.c
tests/_zve64f/: Makefile  main.c
tests/_zve64x/: Makefile  main.c
tests/v/: Makefile  main.c
